# mcp-dora

./: .gitignore  README.md  cli.py  pyproject.toml  server.py
data/: dora_articles.json
scripts/: deploy_mcp_dora.sh  smoke_test_dora.py
system/: mcp-dora.service
tests/: conftest.py  test_compliance.py  test_middleware.py  test_scanner.py  test_tools.py
